# league-rest

./: .gitignore  AGENTS.md  README.md  RELEASE_NOTES.md  pyproject.toml
docs/: manual-windows-qa.md  requirements.md  subagent-workflow.md  technical-approach.md  test-plan.md  ui-interaction.md
docs/tasks/: 000-mvp-plan.md
src/league_rest/: __main__.py  coordinator.py  detector.py  window_focus.py
tests/: test_coordinator.py  test_detector.py  test_smoke.py  test_window_focus.py
